src/test/resources/annotator/mismatchedCloseBlock.twig
{% if foo %}
    {% if bar %}
    {% endif %}
{% <error descr="Mismatched close tag: should match \"if\" declared at line 1">endfor</error>%}